--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,15 +5,17 @@ body {
     height: 100vh;
     font-family: Arial, sans-serif;
     background-color: #f6f6f6;
+    color: #333;
 }
 .sidebar {
     width: 20%;
-    background: #2c3e50;
-    color: white;
+    background: #eaeaea;
+    color: #333;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-right: 1px solid #ccc;
 }
 .sidebar h1 {
     margin-top: 0;
@@ -22,12 +24,13 @@ body {
     width: 100%;
     height: 40px;
     margin-top: 20px;
-    background-color: white;
-    color: black;
+    background-color: #fff;
+    color: #333;
     border: none;
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
 }
 .main-content {
     width: 80%;
@@ -35,16 +38,16 @@ body {
     display: flex;
     flex-direction: column;
     background-color: white;
-    border-left: 1px solid #ccc;
+    /* border-left: 1px solid #ccc; */
 }
 .chat-window {
     flex: 1;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+    /* border: 0.1px solid #ccc; */
     padding: 10px;
     overflow-y: auto;
     background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.0);
 }
 .chat-message {
     display: flex;
@@ -88,12 +91,19 @@ body {
 .input-section textarea[type="text"] {
     flex: 1;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 20px;
     margin-right: 10px;
     resize: none;
     overflow: hidden;
     max-height: 100px; /* Maximum height equivalent to 5 lines */
+    background-color: #f0f0f0;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
+    outline: none;
+}
+.input-section textarea[type="text"]:focus {
+    background-color: #eaeaea;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 .input-section input[type="file"] {
     display: none;
